<resources>
    <string name="app_name">Kukuapp</string>
    <string name="b_start_text">はじめる</string>
    <string name="t_title_text">くくけいさん</string>
    <string name="b_data_text">かこのデータ</string>
    <string name="b_configuration_text">せってい</string>
    <string name="b_six_text">6</string>
    <string name="t_time_text">00:00</string>
    <string name="t_next_text">next</string>
    <string name="t_ordinulnum_text">00もんめ</string>
    <string name="t_display_text">1×1</string>
    <string name="t_input_text">000</string>
    <string name="b_four_text">4</string>
    <string name="b_five_text">5</string>
    <string name="b_seven_text">7</string>
    <string name="b_eight_text">8</string>
    <string name="b_nine_text">9</string>
    <string name="b_two_text">2</string>
    <string name="b_three_text">3</string>
    <string name="b_one_text">1</string>
    <string name="t_zero_text">0</string>
    <string name="b_delete_text">delete</string>
    <string name="t_resultcorrect_text">せいかいりつ\n100/100</string>
    <string name="t_resulttime_text">TIME\n00:00</string>
    <string name="b_onemore_text">もういちど</string>
    <string name="t_wrong_text">まちがえたもんだい\n\n1×1=1 1×2=2 1×3=3 1×4=4 1×5=5 \n1×6=6 1×7=7 1×8=8 1×9=9 2×1=2 \n2×2=4 2×3=6 2×4=8 2×5=10 2×6=12 \n2×7=14 2×8=16 2×9=18 3×1=3 3×2=6 \n3×3=9 3×4=12 3×5=15 3×6=18 3×7=21 \n3×8=24 3×9=27 4×1=4 4×2=8 4×3=12 \n4×4=16 4×5=20 4×6=24 4×7=28 4×8=32 \n4×9=36 5×1=5 5×2=10 5×3=15 5×4=20 \n5×5=25 5×6=30 5×7=35 5×8=40 5×9=45 \n6×1=6 6×2=12 6×3=18 6×4=24 6×5=30 \n6×6=36 6×7=42 6×8=48 6×9=54 7×1=7 \n7×2=14 7×3=21 7×4=28 7×5=35 7×6=42 \n7×7=49 7×8=56 7×9=63 8×1=8 8×2=16 \n8×3=24 8×4=32 8×5=40 8×6=48 8×7=56 \n8×8=64 8×9=72 9×1=9 9×2=18 9×3=27 \n9×4=36 9×5=45 9×6=54 9×7=63 9×8=72 \n9×9=81</string>
    <string name="b_result_corr_text">リセット</string>
    <string name="b_back_corr_text">もどる</string>
    <string name="t_onetimetable_corr_text">1×1:000/000\n1×2:000/000\n1×3:000/000\n1×4:000/000\n1×5:000/000\n1×6:000/000\n1×7:000/000\n1×8:000/000\n1×9:000/000</string>
    <string name="t_twotimetable_corr_text">2×1:000/000\n2×2:000/000\n2×3:000/000\n2×4:000/000\n2×5:000/000\n2×6:000/000\n2×7:000/000\n2×8:000/000\n2×9:000/000</string>
    <string name="t_threetimetable_corr_text">3×1:000/000\n3×2:000/000\n3×3:000/000\n3×4:000/000\n3×5:000/000\n3×6:000/000\n3×7:000/000\n3×8:000/000\n3×9:000/000</string>
    <string name="t_fourtimetable_corr_text">4×1:000/000\n4×2:000/000\n4×3:000/000\n4×4:000/000\n4×5:000/000\n4×6:000/000\n4×7:000/000\n4×8:000/000\n4×9:000/000</string>
    <string name="t_fivetimetable_corr_text">5×1:000/000\n5×2:000/000\n5×3:000/000\n5×4:000/000\n5×5:000/000\n5×6:000/000\n5×7:000/000\n5×8:000/000\n5×9:000/000</string>
    <string name="t_sixtimetable_corr_text">6×1:000/000\n6×2:000/000\n6×4:000/000\n6×4:000/000\n6×5:000/000\n6×6:000/000\n6×7:000/000\n6×8:000/000\n6×9:000/000</string>
    <string name="t_seventimetable_corr_text">7×1:000/000\n7×2:000/000\n7×3:000/000\n7×4:000/000\n7×5:000/000\n7×6:000/000\n7×7:000/000\n7×8:000/000\n7×9:000/000</string>
    <string name="t_eighttimetable_corr_text">8×1:000/000\n8×2:000/000\n8×3:000/000\n8×4:000/000\n8×5:000/000\n8×6:000/000\n8×7:000/000\n8×8:000/000\n8×9:000/000</string>
    <string name="t_ninetimetable_corr_text">9×1:000/000\n9×2:000/000\n9×3:000/000\n9×4:000/000\n9×5:000/000\n9×6:000/000\n9×7:000/000\n9×8:000/000\n9×9:000/000</string>
    <string name="t_headline_corr_text">●まちがえた かいすうを、かくにんできます。\n＊しきの ひだりがわに かいてあるのが \n まちがえたかいすうです。</string>
    <string name="t_title_conf_text">せってい</string>
    <string name="t_headline1_conf_text">●もんだいすうを、せっていできます。</string>
    <string name="t_headline2_conf_text">●もんだいを、らんだむに せっていできます。</string>
    <string name="b_back_conf_text">ほぞん</string>
    <string name="chip_shuffle_conf_text">シャッフル</string>
    <string name="t_headline3_conf_text">●しゅつだいされるだんを せっていできます。</string>
    <string name="rb_25_conf_text">21問</string>
    <string name="rb_50_conf_text">41問</string>
    <string name="rb_75_conf_text">61問</string>
    <string name="rb_100_conf_text">81問</string>
    <string name="checkBox_7_conf_text">7のだん</string>
    <string name="checkBox_4_conf_text">4のだん</string>
    <string name="checkBox_8_conf_text">8のだん</string>
    <string name="checkBox_3_conf_text">3のだん</string>
    <string name="checkBox_5_conf_text">5のだん</string>
    <string name="checkBox_9_conf_text">9のだん</string>
    <string name="checkBox_6_conf_text">6のだん</string>
    <string name="checkBox_2_conf_text">2のだん</string>
    <string name="checkBox_1_conf_text">1のだん</string>
</resources>
