<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <TextView
        android:id="@+id/t_wrong"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:gravity="center"
        android:text="@string/t_wrong_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/b_onemore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/t_resultcorrect"
        android:layout_width="170sp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/t_resultcorrect_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/b_onemore"
        app:layout_constraintEnd_toEndOf="@+id/t_wrong"
        app:layout_constraintTop_toBottomOf="@+id/t_wrong" />

    <TextView
        android:id="@+id/t_resulttime"
        android:layout_width="130sp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/t_resulttime_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/b_onemore"
        app:layout_constraintStart_toStartOf="@+id/t_wrong"
        app:layout_constraintTop_toBottomOf="@+id/t_wrong" />

    <Button
        android:id="@+id/b_onemore"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:gravity="center"
        android:text="@string/b_onemore_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>